add lua(neovim) to README

--- a/README.adoc
+++ b/README.adoc
@@ -102,6 +102,7 @@ It's technically optional since Conjure contains legacy fallback code, but I hig
  * https://github.com/Olical/conjure/wiki/Quick-start:-Scheme-(stdio)[Scheme (stdio)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Guile-(socket)[Guile (socket)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Common-Lisp-(Swank)[Common Lisp (Swank)]
+ * https://github.com/Olical/conjure/wiki/Quick-start:-Lua-(neovim)[Lua (neovim)]
  * https://github.com/Olical/conjure/wiki/Frequently-asked-questions[Frequently asked questions]
 
 All further documentation is found within link:doc/conjure.txt[`:help conjure`]. You can also use `:ConjureSchool` to get an interactive introduction to the workflow and mappings Conjure provides.
