--- a/README.adoc
+++ b/README.adoc
@@ -39,7 +39,7 @@ https://asciinema.org/a/325517[image:https://asciinema.org/a/325517.svg[asciicas
  * Use various mappings to execute the code you're interested in such as the current form, file, buffer or even form at a Neovim mark.
  * Every result is kept in a log buffer that you can access at any time.
  * Support for multiple asynchronous autocompletion frameworks, with https://github.com/Shougo/deoplete.nvim/[deoplete] built in (`<C-x><C-o>` also works!).
- ** You can also use https://github.com/hrsh7th/nvim-compe[nvim-compe] with https://github.com/kkharji/compe-conjure[compe-conjure]. (which I actually recommend!)
+ ** You can also use https://github.com/hrsh7th/nvim-cmp[nvim-cmp] with https://github.com/PaterJason/cmp-conjure[cmp-conjure]. (which I actually recommend!)
 
 Conjure allows you to send the right part of your code off for evaluation, see the results, wrap the results in more code and evaluate that. It keeps a log of your actions and results so you don't have to remember them, that context is extremely helpful when you're down the rabbit hole of a bug hunt.
 
