--- a/README.adoc
+++ b/README.adoc
@@ -20,6 +20,8 @@ The core features of Conjure are language agnostic (although it's targeted at Li
  * https://lisp-lang.org/[Common Lisp] over https://www.cliki.net/SWANK[Swank] (https://github.com/Olical/conjure/wiki/Quick-start:-Common-Lisp-(Swank)[quickstart])
  * https://julialang.org/[Julia] over stdio (https://github.com/Olical/conjure/wiki/Quick-start:-Julia-(stdio)[quickstart])
  * https://www.rust-lang.org/[Rust] over stdio with https://github.com/google/evcxr[evcxr] (https://github.com/Olical/conjure/wiki/Quick-start:-Rust-(evcxr)[quickstart])
+ * https://www.lua.org/[Lua] inside Neovim (https://github.com/Olical/conjure/wiki/Quick-start:-Lua-(stdio)[quickstart])
+ * https://www.python.org/[Python] over stdio (https://github.com/Olical/conjure/wiki/Quick-start:-Python-(stdio)[quickstart])
 
 You can learn more about the mappings and configuration inside Neovim with `:help conjure`. Each language client also has it's own specific help text under `:help conjure-client-{LANGUAGE}-{TRANSPORT}`, such as `:help conjure-client-clojure-nrepl`, which contains specific mappings and configuration for that client.
 
@@ -118,6 +120,7 @@ It's technically optional since Conjure contains legacy fallback code, but I hig
  * https://github.com/Olical/conjure/wiki/Quick-start:-Common-Lisp-(Swank)[Common Lisp (Swank)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Rust-(evcxr)[Rust (evcxr)]
  * https://github.com/Olical/conjure/wiki/Quick-start:-Lua-(neovim)[Lua (neovim)]
+ * https://github.com/Olical/conjure/wiki/Quick-start:-Python-(stdio)[Python (stdio)]
  * https://github.com/Olical/conjure/wiki/Frequently-asked-questions[Frequently asked questions]
 
 All further documentation is found within link:doc/conjure.txt[`:help conjure`]. You can also use `:ConjureSchool` to get an interactive introduction to the workflow and mappings Conjure provides.
