We can now evaluate the "current form" as the cell
- I don't know how to make "evaluate root form" work to evaluate the
  cell without messing with existing behavior because _what we want_
  is a document
- Still have to use `ipython --classic` instead of using ipython itself
  not sure what the implications are. maybe there's something we can do
  here

--- a/dev/ipython/Untitled.ipynb
+++ b/dev/ipython/Untitled.ipynb
@@ -15,7 +15,22 @@
     }
    ],
    "source": [
-    "print(\"Hello world!\")"
+    "print(\"Hello world!\")\n",
+    "print(\"Something else\")\n",
+    "\n",
+    "test = \"ah\"\n",
+    "import numpy as np\n",
+    "somethign = np.zeros((4,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "458bd1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "somethign"
    ]
   },
   {
@@ -24,7 +39,9 @@
    "id": "61b6925a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test"
+   ]
   }
  ],
  "metadata": {
