In progress: figuring out bracketed paste!

--- a/dev/ipython/Untitled.ipynb
+++ b/dev/ipython/Untitled.ipynb
@@ -15,12 +15,24 @@
     }
    ],
    "source": [
+    "print(\"test\")\n",
     "print(\"Hello world!\")\n",
     "print(\"Something else\")\n",
-    "\n",
     "test = \"ah\"\n",
     "import numpy as np\n",
-    "somethign = np.zeros((4,4))"
+    "somethign = np.zeros((4,4))\n",
+    "somethign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d1f953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"test\")\n",
+    "print(\"hello\")"
    ]
   },
   {
@@ -30,6 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "somethign\n",
+    "\n",
+    "\n",
+    "\"test\"\n",
+    "\n",
     "somethign"
    ]
   },
