Rely on ft mappings instead of keys for lazy #510
May want to take another approach, not sure, I prefer ft for now since I
think that's the more common use case. I think some people will want
keys / commands.

Conjure should include more things to make this easy in the future.

--- a/README.adoc
+++ b/README.adoc
@@ -96,7 +96,7 @@ To take advantage of lazy loading, a bit more involved configuration is required
 ----
 return {
     "Olical/conjure",
-    keys = { "<localleader>r" },
+    ft = { "clojure", "fennel", "python" }, -- etc
     -- [Optional] cmp-conjure for cmp
     dependencies = {
         {
@@ -121,8 +121,8 @@ return {
         require("conjure.mapping")["on-filetype"]()
     end,
     init = function()
-	-- Set configuration options here
-        vim.g["conjure#mapping#prefix"] = "<localleader>r"
+	       -- Set configuration options here
+        vim.g["conjure#debug"] = true
     end,
 }
 ----
