--- a/README.adoc
+++ b/README.adoc
@@ -153,23 +153,7 @@ It's technically optional since Conjure contains legacy fallback code, but I hig
 
 == Getting started
 
- * https://github.com/Olical/conjure/wiki/Quick-start:-Clojure[Clojure (JVM)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Clojure-(babashka)[Clojure (babashka)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-ClojureScript-(shadow-cljs)[ClojureScript (shadow-cljs)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Janet-(netrepl)[Janet (netrepl)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(Aniseed)[Fennel (Aniseed)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Fennel-(stdio)[Fennel (stdio)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Racket-(stdio)[Racket (stdio)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Hy-(stdio)[Hy (stdio)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Scheme-(stdio)[Scheme (stdio)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Guile-(socket)[Guile (socket)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Common-Lisp-(Swank)[Common Lisp (Swank)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Rust-(evcxr)[Rust (evcxr)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Lua-(neovim)[Lua (neovim)]
- * https://github.com/Olical/conjure/wiki/Quick-start:-Python-(stdio)[Python (stdio)]
- * https://github.com/Olical/conjure/wiki/Frequently-asked-questions[Frequently asked questions]
-
-All further documentation is found within link:doc/conjure.txt[`:help conjure`]. You can also use `:ConjureSchool` to get an interactive introduction to the workflow and mappings Conjure provides.
+The majority of the documentation can be found within link:doc/conjure.txt[`:help conjure`]. You can also use `:ConjureSchool` to get an interactive introduction to the workflow and mappings Conjure provides. Refer to the list at the top of this file for links to the various quickstart guides for each language.
 
 Please do get in touch via https://conjure.fun/discord[Discord] or https://twitter.com/OliverCaldwell[Twitter] if you have any questions or issues.
 
