--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,7 @@ The core features of Conjure are language agnostic (although it's targeted at Li
  * JavaScript (using https://nodejs.org/[Node.js]) over stdio
  * https://ccrma.stanford.edu/software/snd/[Snd] / https://ccrma.stanford.edu/software/snd/snd/s7.html[s7] (sound editor scriptable with Scheme) over stdio
  * https://en.wikipedia.org/wiki/SQL[SQL] (PostgreSQL psql by default) over stdio
+ * https://www.ruby-lang.org/en/[Ruby] (using https://ruby.github.io/irb/[irb]) over stdio
 
 You can learn more about the mappings and configuration inside Neovim with `:help conjure`. Each language client also has it's own specific help text under `:help conjure-client-{LANGUAGE}-{TRANSPORT}`, such as `:help conjure-client-clojure-nrepl`, which contains specific mappings and configuration for that client.
 
